# Syntacore_Intern_Task

./: CMakeLists.txt  Makefile  README.md  answers_checker.py  test_generator.py  tree_test.txt
include/: app.h  app_status.h  commands.h  exceptions.h  io_stream_handler.h  rb_tree.h  singly_linked_list.h
include/command/: command.h
include/console/: console.h
include/containers/: cont-common.h  containers.h  list_s.h  os_tree_s.h  rb_tree_s.h  vector_s.h
include/exceptions/: error_s.h
include/io/: io_handler.h
include/object/: object.h
include/string/: string_builder.h
src/: app.c  common.c  common.h  main.c
src/command/: command.c
src/commands/: commands.c  commands.h
src/console/: console.c
src/containers/: list_s.c  os_tree_s.c  rb_tree.c  rb_tree_s.c  singly_linked_list.c  singly_linked_list.h  vector_s.c
src/exceptions/: error_s.c  exceptions.c
src/io/: io_handler.c  io_stream_handler.c
src/main_app/: app.c  main.c
src/object/: object.c
src/status/: app_status.c
src/string/: string_builder.c
src/tests/: os_tree_test.c  tests.c  tests.h
